# localnewsmatters-mcp

./: .gitignore  README.md  pyproject.toml
src/localnewsmatters_mcp/: __init__.py  formatting.py  server.py  wp_client.py
tests/: test_formatting.py  test_server.py  test_wp_client.py
