[project]
name = "localnewsmatters-mcp"
version = "0.1.0"
description = "MCP server exposing Local News Matters (localnewsmatters.org) articles and photos"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Local News Matters MCP contributors" }]
keywords = ["mcp", "model-context-protocol", "localnewsmatters", "wordpress", "news"]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
localnewsmatters-mcp = "localnewsmatters_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localnewsmatters_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
